monitoria/mac323/1-3-35/special/Julio-Ueda_181956_assignsubmission_file_EX1.3.35/debug_log.txt
Tester.java:53: error: constructor RandomQueue in class RandomQueue<Item> cannot be applied to given types;
        RandomQueue<Integer> first = new RandomQueue<Integer>();
                                     ^
  required: int
  found: no arguments
  reason: actual and formal argument lists differ in length
  where Item is a type-variable:
    Item extends Object declared in class RandomQueue
Tester.java:54: error: constructor RandomQueue in class RandomQueue<Item> cannot be applied to given types;
        RandomQueue<Integer> second = new RandomQueue<Integer>();
                                      ^
  required: int
  found: no arguments
  reason: actual and formal argument lists differ in length
  where Item is a type-variable:
    Item extends Object declared in class RandomQueue
Tester.java:56: error: cannot find symbol
            first.enqueue(i);
                 ^
  symbol:   method enqueue(int)
  location: variable first of type RandomQueue<Integer>
Tester.java:57: error: cannot find symbol
            second.enqueue(i);
                  ^
  symbol:   method enqueue(int)
  location: variable second of type RandomQueue<Integer>
Tester.java:60: error: cannot find symbol
            if (first.dequeue() == second.dequeue()) continue;
                     ^
  symbol:   method dequeue()
  location: variable first of type RandomQueue<Integer>
Tester.java:60: error: cannot find symbol
            if (first.dequeue() == second.dequeue()) continue;
                                         ^
  symbol:   method dequeue()
  location: variable second of type RandomQueue<Integer>
Tester.java:68: error: constructor RandomQueue in class RandomQueue<Item> cannot be applied to given types;
        RandomQueue<Integer> queue = new RandomQueue<Integer>();
                                     ^
  required: int
  found: no arguments
  reason: actual and formal argument lists differ in length
  where Item is a type-variable:
    Item extends Object declared in class RandomQueue
Tester.java:71: error: cannot find symbol
            queue.enqueue(i);
                 ^
  symbol:   method enqueue(int)
  location: variable queue of type RandomQueue<Integer>
Tester.java:75: error: cannot find symbol
            int rm = (Integer)queue.dequeue();
                                   ^
  symbol:   method dequeue()
  location: variable queue of type RandomQueue<Integer>
Tester.java:90: error: constructor RandomQueue in class RandomQueue<Item> cannot be applied to given types;
        RandomQueue<Integer> queue = new RandomQueue<Integer>();
                                     ^
  required: int
  found: no arguments
  reason: actual and formal argument lists differ in length
  where Item is a type-variable:
    Item extends Object declared in class RandomQueue
Tester.java:103: error: cannot find symbol
                queue.enqueue(j);
                     ^
  symbol:   method enqueue(int)
  location: variable queue of type RandomQueue<Integer>
Tester.java:108: error: cannot find symbol
                val += pot * (Integer)queue.dequeue();
                                           ^
  symbol:   method dequeue()
  location: variable queue of type RandomQueue<Integer>
Tester.java:124: error: constructor RandomQueue in class RandomQueue<Item> cannot be applied to given types;
        RandomQueue<Integer> queue = new RandomQueue<Integer>();
                                     ^
  required: int
  found: no arguments
  reason: actual and formal argument lists differ in length
  where Item is a type-variable:
    Item extends Object declared in class RandomQueue
Tester.java:126: error: cannot find symbol
            queue.enqueue(i);
                 ^
  symbol:   method enqueue(int)
  location: variable queue of type RandomQueue<Integer>
Tester.java:129: error: cannot find symbol
            queue.dequeue();
                 ^
  symbol:   method dequeue()
  location: variable queue of type RandomQueue<Integer>
Tester.java:136: error: constructor RandomQueue in class RandomQueue<Item> cannot be applied to given types;
        RandomQueue<Integer> queue = new RandomQueue<Integer>();
                                     ^
  required: int
  found: no arguments
  reason: actual and formal argument lists differ in length
  where Item is a type-variable:
    Item extends Object declared in class RandomQueue
Tester.java:143: error: cannot find symbol
                queue.enqueue(StdRandom.uniform((int)100000));
                     ^
  symbol:   method enqueue(int)
  location: variable queue of type RandomQueue<Integer>
Tester.java:145: error: cannot find symbol
                queue.dequeue();
                     ^
  symbol:   method dequeue()
  location: variable queue of type RandomQueue<Integer>
Tester.java:154: error: constructor RandomQueue in class RandomQueue<Item> cannot be applied to given types;
        RandomQueue<Integer> queue = new RandomQueue<Integer>();
                                     ^
  required: int
  found: no arguments
  reason: actual and formal argument lists differ in length
  where Item is a type-variable:
    Item extends Object declared in class RandomQueue
Tester.java:156: error: cannot find symbol
            queue.enqueue(10);
                 ^
  symbol:   method enqueue(int)
  location: variable queue of type RandomQueue<Integer>
Tester.java:158: error: cannot find symbol
        int val = (Integer)queue.sample();
                                ^
  symbol:   method sample()
  location: variable queue of type RandomQueue<Integer>
Tester.java:159: error: cannot find symbol
        val = (Integer)queue.dequeue();
                            ^
  symbol:   method dequeue()
  location: variable queue of type RandomQueue<Integer>
Tester.java:160: error: cannot find symbol
        queue.enqueue(val);
             ^
  symbol:   method enqueue(int)
  location: variable queue of type RandomQueue<Integer>
Tester.java:165: error: constructor RandomQueue in class RandomQueue<Item> cannot be applied to given types;
        RandomQueue<Integer> queue = new RandomQueue<Integer>();
                                     ^
  required: int
  found: no arguments
  reason: actual and formal argument lists differ in length
  where Item is a type-variable:
    Item extends Object declared in class RandomQueue
Tester.java:166: error: cannot find symbol
        queue.enqueue(1);
             ^
  symbol:   method enqueue(int)
  location: variable queue of type RandomQueue<Integer>
Tester.java:167: error: cannot find symbol
        int ret = (Integer)queue.sample();
                                ^
  symbol:   method sample()
  location: variable queue of type RandomQueue<Integer>
Tester.java:178: error: constructor RandomQueue in class RandomQueue<Item> cannot be applied to given types;
        RandomQueue<String> queue = new RandomQueue<String>();
                                    ^
  required: int
  found: no arguments
  reason: actual and formal argument lists differ in length
  where Item is a type-variable:
    Item extends Object declared in class RandomQueue
Tester.java:179: error: cannot find symbol
        queue.enqueue("A string");
             ^
  symbol:   method enqueue(String)
  location: variable queue of type RandomQueue<String>
Tester.java:180: error: cannot find symbol
        String res = (String)queue.dequeue();
                                  ^
  symbol:   method dequeue()
  location: variable queue of type RandomQueue<String>
Tester.java:184: error: cannot find symbol
        queue.enqueue("Another String");
             ^
  symbol:   method enqueue(String)
  location: variable queue of type RandomQueue<String>
Note: ./RandomQueue.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
30 errors
